--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -11,11 +11,12 @@ jobs:
     matrix:
       node-version: [14.x, 16.x, 18.x, 20.x]
     steps:
-      - uses: actions/checkout@v3
-      - name: Use node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: "actions/checkout@v3"
+      - name: "Use node.js ${{ matrix.node-version }}"
+        uses: "actions/setup-node@v3"
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "${{ matrix.node-version }}"
+      - name: "Build static website"
         run: npm build
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
