--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -8,8 +8,8 @@ jobs:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
     strategy:
-    matrix:
-      node-version: [14.x, 16.x, 18.x, 20.x]
+      matrix:
+        node-version: ["14.x", "16.x", "18.x", "20.x"]
     steps:
       - uses: "actions/checkout@v3"
       - name: "Use node.js ${{ matrix.node-version }}"
