fix github action

--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -7,20 +7,20 @@ jobs:
   tagged-release:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
-    strategy:
-      matrix:
-        node-version: ["14.x", "16.x", "18.x", "20.x"]
     steps:
       - uses: "actions/checkout@v3"
-      - name: "Use node.js ${{ matrix.node-version }}"
+      - name: "Set up node.js"
         uses: "actions/setup-node@v3"
         with:
-          node-version: "${{ matrix.node-version }}"
+          node-version: "18.x"
       - name: "Build static website"
-        run: npm build
+        run: npm run build
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r site.zip output
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           files: |
-            output
+            site.zip
